--- a/trunk/InfDatabase/InfDatabase/InfDatabase.csproj
+++ b/trunk/InfDatabase/InfDatabase/InfDatabase.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="InfServer.Network, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\InfServer\trunk\bin\InfServer.Network.dll</HintPath>
+      <HintPath>..\bin\InfServer.Network.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
