--- a/trunk/InfServer.DirectoryServer/InfServer.DirectoryServer.csproj
+++ b/trunk/InfServer.DirectoryServer/InfServer.DirectoryServer.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Directory\DirectoryClient.cs" />
     <Compile Include="Directory\DirectoryServer.cs" />
+    <Compile Include="Directory\Logic\Packets\Challenge.cs" />
+    <Compile Include="Directory\Logic\Packets\ZoneListing.cs" />
     <Compile Include="Directory\Protocol\Factory.cs" />
     <Compile Include="Directory\Protocol\Helpers\Zone.cs" />
     <Compile Include="Directory\Protocol\Helpers\ZoneStream.cs" />
