--- a/trunk/InfServer.Database/InfServer.Database.csproj
+++ b/trunk/InfServer.Database/InfServer.Database.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DEE908A4-5FBE-440B-8A6D-99442F30F3A2}</ProjectGuid>
+    <ProjectGuid>{3581E182-401E-4E42-BEEC-A5952C9987D5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InfServer.DirectoryServer</RootNamespace>
-    <AssemblyName>InfServer.DirectoryServer</AssemblyName>
+    <RootNamespace>InfServer.Database</RootNamespace>
+    <AssemblyName>InfServer.Database</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,29 +44,52 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Directory\DirectoryClient.cs" />
-    <Compile Include="Directory\DirectoryServer.cs" />
-    <Compile Include="Directory\Logic\Packets\Challenge.cs" />
-    <Compile Include="Directory\Logic\Packets\ZoneListing.cs" />
-    <Compile Include="Directory\Protocol\Factory.cs" />
-    <Compile Include="Directory\Protocol\Helpers\Zone.cs" />
-    <Compile Include="Directory\Protocol\Helpers\ZoneStream.cs" />
-    <Compile Include="Directory\Protocol\Packets\CS_AckZoneList.cs" />
-    <Compile Include="Directory\Protocol\Packets\CS_Initiate.cs" />
-    <Compile Include="Directory\Protocol\Packets\CS_Version.cs" />
-    <Compile Include="Directory\Protocol\Packets\CS_ZoneList.cs" />
-    <Compile Include="Directory\Protocol\Packets\SC_Initiate.cs" />
-    <Compile Include="Directory\Protocol\Packets\SC_ZoneList.cs" />
-    <Compile Include="Directory\Registrar.cs" />
+    <Compile Include="Infantry1.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Infantry.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="Logic\Login.cs" />
+    <Compile Include="Logic\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Server\DBServer.cs" />
+    <Compile Include="Server\Objects\Zone.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Infantry.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>Infantry1.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InfServer.DBComm\InfServer.DBComm.csproj">
+      <Project>{8817E7B9-441E-45EF-B2BF-9E637DCCB868}</Project>
+      <Name>InfServer.DBComm</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InfServer.Network\InfServer.Network.csproj">
       <Project>{5D556DA8-1878-46F3-8064-AC5338832BB4}</Project>
       <Name>InfServer.Network</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Infantry.dbml.layout">
+      <DependentUpon>Infantry.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
