--- a/branches/InfLauncher/InfLauncher/InfLauncher.csproj
+++ b/branches/InfLauncher/InfLauncher/InfLauncher.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\MainController.cs" />
-    <Compile Include="Helpers\LoginResponseData.cs" />
+    <Compile Include="Models\Account.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
