InfLauncher: First implementation of News added.

--- a/InfLauncher/InfLauncher.csproj
+++ b/InfLauncher/InfLauncher.csproj
@@ -54,10 +54,13 @@
   <ItemGroup>
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\AssetDownloadController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Helpers\Config.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Asset.cs" />
+    <Compile Include="Models\News.cs" />
     <Compile Include="Protocol\AssetDownloader.cs" />
+    <Compile Include="Protocol\NewsDownloader.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +75,12 @@
     </Compile>
     <Compile Include="Views\NewAccountForm.Designer.cs">
       <DependentUpon>NewAccountForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NewsForm.Designer.cs">
+      <DependentUpon>NewsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\UpdaterForm.cs">
       <SubType>Form</SubType>
@@ -93,6 +102,9 @@
     </Compile>
     <EmbeddedResource Include="Views\NewAccountForm.resx">
       <DependentUpon>NewAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\NewsForm.resx">
+      <DependentUpon>NewsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\UpdaterForm.resx">
       <DependentUpon>UpdaterForm.cs</DependentUpon>
