--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -125,6 +125,8 @@
     <Compile Include="Bots\FollowBot\FollowBot.cs" />
     <Compile Include="GameTypes\CTF\CTF.cs" />
     <Compile Include="GameTypes\CTF_OvD\OvD.cs" />
+    <Compile Include="GameTypes\ZombieZone\ZombieBot.cs" />
+    <Compile Include="GameTypes\ZombieZone\ZombieZone.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
