Added permission mode methods for *permit aswell as added support to CS_Login

--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Logic\General\Assets.Item.cs" />
     <Compile Include="Logic\General\Assets.Skills.cs" />
     <Compile Include="Logic\General\Rewards.cs" />
+    <Compile Include="Logic\Helpers\Permit.cs" />
     <Compile Include="Logic\Lio\Warp.cs" />
     <Compile Include="Logic\Packets\Arenas\Arenas.cs" />
     <Compile Include="Logic\Packets\Login\Assets.cs" />
